[gd_scene load_steps=6 format=3 uid="uid://lsn62h1o0h5h"]

[ext_resource type="Texture2D" uid="uid://ddw8uwxynji0s" path="res://assets/backs/back_black_basic_white.png" id="1_4vn3v"]
[ext_resource type="Script" path="res://scenes/playing_cards_table/deck_placeholder.gd" id="1_c6n50"]
[ext_resource type="AudioStream" uid="uid://de4k1gs87yp1m" path="res://assets/sounds/card_deal_sound.mp3" id="3_w36rd"]
[ext_resource type="AudioStream" uid="uid://5vlx8hoju3sk" path="res://assets/sounds/card_deal_three.ogg" id="5_jh0hy"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qjmvl"]
streams_count = 2
playback_mode = 1
stream_0/stream = ExtResource("5_jh0hy")
stream_0/weight = 1.1
stream_1/stream = ExtResource("3_w36rd")
stream_1/weight = 1.0

[node name="DeckPlaceholder" type="Node2D"]
script = ExtResource("1_c6n50")

[node name="OneCard" type="Sprite2D" parent="."]
texture = ExtResource("1_4vn3v")

[node name="Half" type="Sprite2D" parent="."]
position = Vector2(3, 0)
texture = ExtResource("1_4vn3v")

[node name="SemiFull" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(9, 0)
texture = ExtResource("1_4vn3v")

[node name="Full" type="Sprite2D" parent="."]
position = Vector2(6, 0)
texture = ExtResource("1_4vn3v")

[node name="DealCardTexture" type="Sprite2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qjmvl")
